--- a/Bootcamp Machine Learning - IGTI/Desafio - Modulo 2/Desafio_Modulo2.ipynb
+++ b/Bootcamp Machine Learning - IGTI/Desafio - Modulo 2/Desafio_Modulo2.ipynb
@@ -1235,7 +1235,7 @@
       },
       "source": [
         "from sklearn.neural_network import MLPClassifier\n",
-        "clf_mlp = MLPClassifier(alpha=1e5, hidden_layer_sizes=(5, 5), random_state=1, max_iter=500)\n",
+        "clf_mlp = MLPClassifier(alpha=1e-5, hidden_layer_sizes=(5, 5), random_state=1)\n",
         "clf_mlp.fit(X_train, y_train)\n",
         "prediction_mlp = clf_mlp.predict(X_validation)\n",
         "print(\"A acurária do modelo é: {}\" .format(metrics.accuracy_score(y_validation, prediction_mlp)))"
@@ -1245,7 +1245,7 @@
         {
           "output_type": "stream",
           "text": [
-            "A acurária do modelo é: 0.43125\n"
+            "A acurária do modelo é: 0.60\n"
           ],
           "name": "stdout"
         }
